DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/TIMBASURVEYS__SurveyQuestion__c.object-meta.xml
<CustomObject>
    <label>SurveyQuestion</label>
    <nameField>
        <label>SurveyQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>