DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__HasChild__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__HasChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasChild</label>
    <type>Checkbox</type>
</CustomField>