DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__isWeightManaged__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__isWeightManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWeightManaged</label>
    <type>Checkbox</type>
</CustomField>