DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__PageNumber__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__PageNumber__c</fullName>
    <label>PageNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>