DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__ParentId__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentId</label>
    <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
    <relationshipLabel>SurveyQuestions</relationshipLabel>
    <relationshipName>SurveyQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>