DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__Question2__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Question2__c</fullName>
    <label>Question2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>