DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__Question__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Question__c</fullName>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>