DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__QuestionComment__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__QuestionComment__c</fullName>
    <label>QuestionComment</label>
    <type>TextArea</type>
</CustomField>