DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__QuestionType__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__QuestionType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionType</label>
    <referenceTo>TIMBASURVEYS__QuestionType__c</referenceTo>
    <relationshipLabel>SurveyQuestions</relationshipLabel>
    <relationshipName>SurveyQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>