DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__QuestionTypeCode__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__QuestionTypeCode__c</fullName>
    <label>QuestionTypeCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>