DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__RichTextEditorEnabled__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RichTextEditorEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RichTextEditorEnabled</label>
    <type>Checkbox</type>
</CustomField>