DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__TextLength__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__TextLength__c</fullName>
    <label>TextLength</label>
    <length>120</length>
    <type>Text</type>
</CustomField>