DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyQuestion__c/fields/TIMBASURVEYS__ToolTip__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ToolTip__c</fullName>
    <description>The tooltip than show when the mouse is over the title of a question</description>
    <label>ToolTip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>